# glass-easel-i18n

./: .eslintignore  .gitignore  Cargo.toml  README-zh_CN.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  publish.js  tsconfig.json
glass-easel-i18n/: .gitignore  Cargo.toml  README.md  output.po  output.wxml  package.json  test.toml  test.wxml
glass-easel-i18n/src/: js_bindings.rs  lib.rs  main.rs
glass-easel-i18n/src/compile/: mod.rs
glass-easel-i18n/src/search/: mod.rs
glass-easel-i18n/tests/: search.rs  transpile.rs
glass-easel-miniprogram-i18n-template/: .gitignore  i18nconfig.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
glass-easel-miniprogram-i18n-template/src/: app.ts
glass-easel-miniprogram-i18n-template/src/locale/: en-us.po  ja.po
glass-easel-miniprogram-i18n-template/src/page/index/: index.wxml
glass-easel-miniprogram-i18n-template/src/page/index/index.locale/: en-us.toml  ja.toml
glass-easel-miniprogram-i18n-template/src/pages/home/: index.ts  index.wxml
glass-easel-miniprogram-i18n-template/src/pages/index/: index.ts  index.wxml  index.wxss  untranslated.po
glass-easel-miniprogram-i18n-template/src/pages/index/index.locale/: en-us.po  en-us.toml  ja.po  ja.toml
glass-easel-miniprogram-i18n-webpack-loader/: README.md  command.js  index.js  index.ts  package.json  tsconfig.json  wxml_i18n_loader.js
glass-easel-miniprogram-i18n-webpack-plugin/: README.md  command.js  index.js  index.ts  package.json  pnpm-lock.yaml  wxml_i18n_loader.js
home/: index.wxml  index.wxss
