[package]
name = "glass-easel-i18n"
version = "0.4.0"
authors = ["LastLeaf <bqfu@163.com>", "BitterGourd <bittergourd1020@gmail.com>"]
description = "Non-invasive I18n Support for glass-easel"
license = "MIT"
documentation = "https://github.com/wechat-miniprogram/glass-easel-i18n"
repository = "https://github.com/wechat-miniprogram/glass-easel-i18n"
homepage = "https://github.com/wechat-miniprogram/glass-easel-i18n"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
path = "src/lib.rs"

[[bin]]
name = "glass-easel-i18n"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
glass-easel-template-compiler = "0.5.2"
regex = "1.10.4"
serde = "1"
toml = "0.8.12"
wasm-bindgen = "0.2.79"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
